--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:sqlserver://localhost;databaseName=Playground;encrypt=true;trustServerCertificate=true;
-spring.datasource.username=mrigank
-spring.datasource.password=Boeing727
+spring.datasource.username=someuser
+spring.datasource.password=xxxxxxxxx
 # logging.level.org.springframework.jdbc.core.JdbcTemplate=DEBUG
 # logging.level.org.springframework.jdbc.core.StatementCreatorUtils=TRACE
 logging.level.org=ERROR
